Added instructions on index page

--- a/index.html
+++ b/index.html
@@ -1,25 +1,54 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | GraphVis</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="TemplateData/UnityProgress.js"></script>  
-    <script src="Build/UnityLoader.js"></script>
-    <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/GraphVis_WebGL_v001b001_devel.json", {onProgress: UnityProgress});
-    </script>
-  </head>
-  <body>
-    <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">GraphVis</div>
-      </div>
-    </div>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>Unity WebGL Player | GraphVis</title>
+		<link rel="shortcut icon" href="TemplateData/favicon.ico">
+		<link rel="stylesheet" href="TemplateData/style.css">
+		<script src="TemplateData/UnityProgress.js"></script>	
+		<script src="Build/UnityLoader.js"></script>
+		<script>
+			var gameInstance = UnityLoader.instantiate("gameContainer", "Build/GraphVis_WebGL_v001b001_devel.json", {onProgress: UnityProgress});
+		</script>
+	</head>
+	<body>
+		<div class="webgl-content">
+			<div id="gameContainer" style="width: 960px; height: 600px"></div>
+			<div class="footer">
+				<div class="webgl-logo"></div>
+				<div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
+				<div class="title">GraphVis</div>
+			</div>
+		<div>
+			<p>
+				This visualisation was written by Joshua Hollick using data from <a href="https://espace.curtin.edu.au/">Curtin's eSpace</a>. Thanks to Janice Chan and Daniel Piczak for access to data and the original idea.
+			</p>
+			<p>
+				For more details please see the paper:<br>
+				&emsp;Joshua Hollick, Pauline Joseph, Peter Green, Janice Chan, "Research network visualisation of co-authorship at Curtin" (in preparation).
+			</p>
+			<p>
+				This visualisation shows coauthorship within Curtin University. Each node is a person, links are created between people that have coauthored a paper. The strength of these links is proportional to the number of papers coauthored.
+			</p>
+			Controls are as follows:
+			<ul>
+				<li>Use the mouse and WASD to look/move around, Hold shift to speed up movement.</li>
+				<li>Q & E rotate the screen anticlockwise and clockwise respectively.</li>
+				<li>1-5 enable/disable faculties</li>
+				<li>I, O, P show colouring based on different things</li>
+				<ul>
+					<li>I - Faculty Colours</li>
+					<li>O - Degree Centrality, shows nodes and links that have lots of connections</li>
+					<li>P - Betweenness Centrality, essentially shows the most important nodes and links based on the whole graph connectivity.</li>
+				</ul>
+				<li>Press 'R' to start/stop the charge spring model (works like play/pause)</li>
+				<li>"Reset State" resets to the default. This doesn't overwrite your previous save so to go back just exit and restart to restore.</li>
+			</ul>
+				<p>
+				<b>Important Note</b>: The data contained in this visualisation is from a limited period and may be incomplete. While the values shown are indicitive they should not be taken as a true representation of research output without further investigation.
+			</p>
+		</div>
+		</div>
+	</body>
 </html>
