Fix page layout

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		</script>
 	</head>
 	<body>
+		<h1>Curtin eSpace Visualisation</h1>
 		<div class="webgl-content">
 			<div id="gameContainer" style="width: 960px; height: 600px"></div>
 			<div class="footer">
 				<div class="webgl-logo"></div>
 				<div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-				<div class="title">eSpace Visualisation</div>
+				<div class="title">Press here to make fullscreen >></div>
 			</div>
 		<div>
 			<p>
